[FIX] Fixing responsive on iphone

--- a/src/styles/pages/_abilities.scss
+++ b/src/styles/pages/_abilities.scss
@@ -216,7 +216,7 @@
 
     }
     }
-    @media screen and (max-width: 390px){
+    @media screen and (max-width: 450px){
     .AbilitiesData {
         display: grid !important;
         grid-template-columns: 1fr !important;
